<?xml version="1.0" encoding="utf-8"?>

<!--Assignment #: HW08
File Name: Group25_HW08 - activity_main.xml
Full Name: Kristin Pflug-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/startingAddress"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:ellipsize="none"
        android:maxLines="3"
        android:minLines="2"
        android:scrollHorizontally="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toEndOf="@+id/enterStartAddress"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/enterStartAddress"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/start_address_button"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/endingAddress"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ellipsize="none"
        android:maxLines="3"
        android:minLines="2"
        android:scrollHorizontally="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toEndOf="@+id/enterEndAddress"
        app:layout_constraintTop_toBottomOf="@+id/startingAddress" />

    <Button
        android:id="@+id/enterEndAddress"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:text="@string/end_address_button"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterStartAddress" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map_container"
        android:name="com.example.group25hw08.MapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findGasStations" />

    <Button
        android:id="@+id/button_getDirections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/get_directions_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterEndAddress" />

    <Button
        android:id="@+id/findRestaurants"
        android:layout_width="128dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        android:text="@string/get_restaurants_button"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterEndAddress" />

    <Button
        android:id="@+id/findGasStations"
        android:layout_width="128dp"
        android:layout_height="45dp"
        android:layout_marginTop="62dp"
        android:text="@string/get_gas_stations_button"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.818"
        app:layout_constraintStart_toEndOf="@+id/findRestaurants"
        app:layout_constraintTop_toBottomOf="@+id/endingAddress" />
</androidx.constraintlayout.widget.ConstraintLayout>